Updated About Me Section

--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
     
 
     <div class="article-content">
-      <p>Hello my name is Noah Landis.</p>
+      <p>Hello my name is Noah Landis.I am a junior student at the University of Nebraska-Lincoln pursuing a bachelors degree in Journalism with a major in Sports Media and Communications. Additionally, I am working towards obtaining a minor in Entrepreneurship. My expected graduation is in May 2023. I am interested in jobs involving production, social media and possibly even marketing.</p>
 
     </div>
   </article>
